--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ header {
   padding: 0px 30px;
   justify-content: space-between;
   align-items: center;
-  background-color: rgb(255, 222, 113);
+  background-color: rgb(180, 214, 241);
 }
 
 #modalDialog {
@@ -19,7 +19,8 @@ header {
   border: 1px solid;
   border-radius: 5px;
   z-index: 10;
-  background-color: rgb(255, 222, 113);
+  background-color: rgb(180, 214, 241);
+  min-width: 300px;
   width: 40%;
   flex-direction: column;
   padding: 20px;
